--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation("androidx.navigation:navigation-compose:2.5.3")
 
 
