--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation("androidx.navigation:navigation-compose:2.5.3")
 
-
-    implementation "androidx.compose.runtime:runtime-livedata:1.4.0-alpha01"
+    implementation("me.onebone:toolbar-compose:2.3.5")
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
