--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.example.whatssappmainactivitymock">
 <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name=".project.ApplicationContext"
+        android:name=".project.main.ApplicationContext"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.WhatssappMainActivityMock"
         tools:targetApi="33">
         <activity
-            android:name=".project.MainActivity"
+            android:name=".project.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.WhatssappMainActivityMock">
